Closed Bug 1826242 Opened 2 years ago Closed 1 year ago

Remote CaretOffset doesn't use cache

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox114 --- fixed

People

(Reporter: eeejay, Assigned: Jamie)

References

Details

Attachments

(1 file)

The sync IPC method is called instead of HyperTextAccessibleBase implementation.

Oops. We do use HTABase CaretOffset on Windows, but not for other platforms.

CaretLineNumber isn't implemented for the cache yet.

Blocks: a11y-ctw-text
No longer blocks: a11y-ctw
Severity: -- → S3

CaretLineNumber is covered by bug 1826853.

See Also: → 1826853
Summary: Remote CaretOffset and CaretLineNumber don't use cache → Remote CaretOffset doesn't use cache
Assignee: eitan → jteh
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/69c04c05e376
Use the cache for RemoteAccessible::CaretOffset on non-Windows. r=nlapre
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: