Bug 1826242: Use the cache for RemoteAccessible::CaretOffset on non-Windows. r=nlapre

Differential Revision: https://phabricator.services.mozilla.com/D176980